--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-router": "^4.0.0"
   },
   "dependencies": {
-    "axios": "^1.8.1"
+    "axios": "^1.8.1",
+    "pinia": "^3.0.1"
   }
 }
